--- a/Email.html
+++ b/Email.html
@@ -10,10 +10,10 @@
     <div class="bg-[rgb(26,62,68)] text-white flex items-center justify-center h-screen text-6xl">
         <div class="bg-white pt-5 p-4 md:pl-5 p-4  mx-6 rounded-2xl">
             <div class="flex flex-col md:flex-row rounded-l-xl ">
-                <img class="object-fit rounded-xl h-64 md:h-96 rounded-l-xl transform hover:scale-105
+                <img class="object-fit rounded-xl h-64 md:h-96 md:rounded-l-xl md:rounded-r-none transform hover:scale-105
                 duration-300" 
                 src="images/recipe.jpg" alt="">
-                <div class="p-6 md:p-12">
+                <div class="p-6 md:p-12 ">
                     <h2 class="font-family:sans text-2xl font-medium text-center text-black md:text-left">
                         Get the latest recipes in your inbox
                         <p class="max-w-sm mt-4 leading-5 tracking-wide text-center text-base text-gray-500 md:text-left">
