--- a/Price Grids.html
+++ b/Price Grids.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="flex items-center justify-center min-h-screen bg-slate-800">
-        <div class="flex flex-col my-auto space-y-6 md:space-y-0 md:space-x-6 
-        md:flex-row md:my-y-0 text-white">
+        <div class="flex flex-col my-6 space-y-6 md:space-y-0 md:space-x-6 
+        md:flex-row text-white">
             <!-- col1 -->
             <div class="bg-slate-700 rounded-xl text-white">
                 <div class="p-8 mx-3 mt-3 rounded-t-xl bg-slate-800">
