--- a/Bookmark Page/index.html
+++ b/Bookmark Page/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <script src="js/script.js" defer></script>
 </head>
-<body class="overflow-x-hidden">
-    <nav class=" mx-auto p-6 shadow-md sticky px-20">
+<body class="overflow-x-hidden dark:bg-slate-800 dark:text-white ">
+    <nav class=" mx-auto p-6 shadow-md sticky px-20 dark:bg-slate-900 dark:text-white">
         
         <div class="flex flex-col md:flex-row items-center justify-between space-y-10 md:space-y-0 md:space-x-20 my-6">
             <h1 class="uppercase font-bold font-playfair text-3xl">bookmark</h1>
@@ -19,7 +20,13 @@
                 <a href="" class="black-btn">Features</a>
                 <a href="" class="black-btn">Download</a>
                 <a href="" class="black-btn">faq</a>
-                <button class="bg-slate-600 rounded-sm px-6 py-2 text-white hover:bg-slate-800 duration-200">Login</button>
+                <button class=" bg-slate-600 dark:bg-slate-700 dark:hover:bg-slate-600 rounded-sm px-6 py-2 text-white hover:bg-slate-800 duration-200">Login</button>
+                <button id="theme-toggle-dark-icon" type="button" class=" hover:text-black mx-auto duration-200 block  group flex items-center  text-gray-600 font-medium" data-hs-theme-click-value="dark">
+                    <svg class="flex-shrink-0 size-6" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"/></svg>
+                </button>
+                <button id="theme-toggle-light-icon" type="button" class=" hidden duration-200 mx-auto  group flex items-center text-gray-400 hover:text-orange-600 font-medium  " data-hs-theme-click-value="light">
+                    <svg class="flex-shrink-0 size-6" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="4"/><path d="M12 8a2 2 0 1 0 4 4"/><path d="M12 2v2"/><path d="M12 20v2"/><path d="m4.93 4.93 1.41 1.41"/><path d="m17.66 17.66 1.41 1.41"/><path d="M2 12h2"/><path d="M20 12h2"/><path d="m6.34 17.66-1.41 1.41"/><path d="m19.07 4.93-1.41 1.41"/></svg>
+                </button>
             </div>
         </div>
     </nav>
@@ -28,7 +35,7 @@
         <div class="container mt-20  mx-auto items-center mb-48 flex  flex-col md:flex-row p-6 space-y-10 md:space-y-0">
             <div class="w-1/2 md:text-left text-center md:pl-52 space-y-10 ">
                 <h1 class="text-3xl  font-playfair">A Simple Bookmark Manager</h1>
-                <p class="  text-gray-600 tracking-wider leading-7">Lorem ipsum dolor sit amet, consectetur asint corporis maxime fugit, doloremque voluptas cum magni voluptatibus officiis iusto voluptate!</p>
+                <p class=" dark:text-gray-400 text-gray-600 tracking-wider leading-7">Lorem ipsum dolor sit amet, consectetur asint corporis maxime fugit, doloremque voluptas cum magni voluptatibus officiis iusto voluptate!</p>
             </div>
             <div class="w-1/2 flex ">
                 <img src="./images/fashion.jpg" class="pl-10 hover:scale-105 duration-200 flex max-h-[500px]" >
@@ -36,7 +43,7 @@
         </div>
     </section>
     <!-- Feature -->
-    <section id="features" class="bg-slate-800 pb-12 pt-10">
+    <section id="features" class="bg-slate-800 dark:bg-slate-700 pb-12 pt-10">
         <div class="container mx-auto px-6 font-playfair">
             <h2 class="mb-6 text-4xl font-semibold  text-center text-white">Features</h2>
             <p class="max-w-lg mx-auto text-center text-lg text-gray-200 tracking-wider leading-7">
@@ -54,15 +61,15 @@
             <!-- Tabs Flex Container -->
             <div class="flex flex-col justify-center max-w-xl mx-auto mb-6 border-b md:space-x-10 md:flex-row">
                 <!-- Tab 1 -->
-                <div class="flex justify-center text-center cursor-pointer font-semibold text-gray-600 border-b md:border-b-0 duration-150 hover:text-black md:w-1/3 tab" data-target="panel-1">
-                    <div class="py-5 border-b-4 border-slate-600" data-target="panel-1">Simple Bookmarking</div>
+                <div class="flex justify-center text-center dark:text-gray-300 cursor-pointer font-semibold text-gray-600 border-b md:border-b-0 duration-150 hover:text-black md:w-1/3 tab" data-target="panel-1">
+                    <div class="py-5 border-b-4 dark:border-white border-slate-600" data-target="panel-1">Simple Bookmarking</div>
                 </div>
                 <!-- Tab 2 -->
-                <div class="flex justify-center text-center cursor-pointer font-semibold text-gray-600 border-b md:border-b-0 duration-150 hover:text-black md:w-1/3 tab" data-target="panel-2">
+                <div class="flex justify-center text-center cursor-pointer font-semibold dark:text-gray-300 text-gray-600 border-b md:border-b-0 duration-150 hover:text-black md:w-1/3 tab" data-target="panel-2">
                     <div class="py-5" data-target="panel-2">Speedy Searching</div>
                 </div>
                 <!-- Tab 3 -->
-                <div class="flex justify-center text-center cursor-pointer font-semibold text-gray-600 border-b md:border-b-0 duration-150 hover:text-black md:w-1/3 tab"data-target="panel-3">
+                <div class="flex justify-center dark:text-gray-300 text-center cursor-pointer font-semibold text-gray-600 border-b md:border-b-0 duration-150 hover:text-black md:w-1/3 tab"data-target="panel-3">
                     <div class="py-5" data-target="panel-3">Easy Sharing</div>
                 </div>
             </div>
@@ -78,14 +85,14 @@
                     <!-- Panel Content -->
                     <div class="flex flex-col space-y-8 md:w-1/2">
                         <h3 class="mt-32 text-3xl font-semibold text-center md:mt-0 md:text-left">Moon Knight</h3>
-                        <p class="max-w-md text-center text-gray-600 text-base md:text-left">
+                        <p class="max-w-md text-center dark:text-gray-300 text-gray-600 text-base md:text-left">
                             Organize your bookmarks however you like. Our simple
                             drag-and-drop interface gives you complete control over how you
                             manage your favourite sites.
                         </p>
                         <div class="mx-auto md:mx-0">
                             <a href="#" class="px-6 py-3 mt-4 font-semibold text-white border-2 border-white rounded-lg 
-                            md:inline-flex bg-softBlue hover:bg-white hover:text-softBlue hover:border-softBlue hover:border-2">More Info</a>
+                            md:inline-flex  bg-slate-700 hover:bg-slate-900 dark:bg-transparent dark:hover:bg-white dark:hover:text-slate-600 duration-200 hover:border-2">More Info</a>
                         </div>
                     </div>
                 </div>
@@ -99,12 +106,12 @@
                         <!-- Panel Content -->
                         <div class="flex flex-col space-y-8 md:w-1/2">
                             <h3 class="mt-32 text-3xl font-semibold text-center md:mt-0 md:text-left">Iron Man</h3>
-                            <p class="max-w-md text-center text-gray-600 text-base md:text-left">
+                            <p class="max-w-md text-center dark:text-gray-300 text-gray-600 text-base md:text-left">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, debitis sed. Quasi totam sunt doloribus molestias eaque necessitatibus. Ipsa esse porro exercitationem aliquid neque officia quos inventore, delectus optio. Facilis.
                             </p>
                             <div class="mx-auto md:mx-0">
                                 <a href="#" class="px-6 py-3 mt-4 font-semibold text-white border-2 border-white rounded-lg 
-                                md:inline-flex bg-softBlue hover:bg-white hover:text-softBlue hover:border-softBlue hover:border-2">More Info</a>
+                                md:inline-flex bg-slate-700 hover:bg-slate-900 dark:bg-transparent dark:hover:bg-white dark:hover:text-slate-600 duration-200 hover:border-2">More Info</a>
                             </div>
                         </div>
                     </div>
@@ -118,7 +125,7 @@
                         <!-- Panel Content -->
                         <div class="flex flex-col space-y-8 md:w-1/2">
                             <h3 class="mt-32 text-3xl font-semibold text-center md:mt-0 md:text-left">Chapakkk</h3>
-                            <p class="max-w-md text-center text-gray-600 text-base md:text-left">
+                            <p class="max-w-md text-center dark:text-gray-300 text-gray-600 text-base md:text-left">
                                 Ek machli pani me gayi Chapakkk. Do machli pani me gayi chapakkk
                             </p>
                         </div>
@@ -132,7 +139,7 @@
             <h2 class="mb-6 text-3xl font-semibold text-center md:text-4xl">
                 Frequently Asked Questions
             </h2>
-            <p class="max-w-lg px-6 mx-auto text-center text-cyan-900">
+            <p class="max-w-lg px-6 mx-auto text-center dark:text-gray-400 text-cyan-900">
                 Here are some of our FAQs. If you have any other questions you'd like
                 answered please feel free to email us.
             </p>
@@ -148,11 +155,11 @@
                 <!-- Tab 1 -->
                 <div class="py-1 border-b outline-none group" tabindex="1">
                     <!-- Tab Flex Container -->
-                    <div class="flex items-center justify-between py-3 text-gray-500 transition duration-500 cursor-pointer group ease">
+                    <div class="flex items-center justify-between py-3 dark:text-gray-300 text-gray-500 transition duration-500 cursor-pointer group ease">
                     <!-- Tab Title -->
-                        <div class="transition duration-500 ease group-hover:text-cyan-800"> What is Bookmark?</div>
+                        <div class="transition duration-500 ease dark:group-hover:text-white group-hover:text-cyan-800"> What is Bookmark?</div>
                         <!-- Arrow -->
-                        <div class="transition duration-500 ease group-focus:-rotate-180 group-hover:text-cyan-800">
+                        <div class="transition duration-500 ease group-focus:-rotate-180 dark:group-hover:text-white group-hover:text-cyan-800">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
                                 <path fill="none" stroke="currentColor" stroke-width="3" d="M1 1l8 8 8-8"/>
                             </svg>
@@ -171,11 +178,11 @@
             <!-- Tab 2 -->
             <div class="py-1 border-b outline-none group" tabindex="2">
                 <!-- Tab Flex Container -->
-                <div class="flex items-center justify-between py-3 text-gray-500 transition duration-500 cursor-pointer group ease">
+                <div class="flex items-center justify-between py-3 dark:text-gray-300 text-gray-500 transition duration-500 cursor-pointer group ease">
                 <!-- Tab Title -->
-                    <div class="transition duration-500 ease group-hover:text-cyan-800"> Is there a mobile app?</div>
+                    <div class="transition duration-500 ease dark:group-hover:text-white group-hover:text-cyan-800"> Is there a mobile app?</div>
                     <!-- Arrow -->
-                    <div class="transition duration-500 ease group-focus:-rotate-180 group-hover:text-cyan-800">
+                    <div class="transition duration-500 ease group-focus:-rotate-180 dark:group-hover:text-white group-hover:text-cyan-800">
                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
                             <path fill="none" stroke="currentColor" stroke-width="3" d="M1 1l8 8 8-8"/>
                         </svg>
@@ -194,11 +201,11 @@
             <!-- Tab 3 -->
             <div class="py-1 border-b outline-none group" tabindex="3">
                 <!-- Tab Flex Container -->
-                <div class="flex items-center justify-between py-3 text-gray-500 transition duration-500 cursor-pointer group ease">
+                <div class="flex items-center justify-between py-3 dark:text-gray-300 text-gray-500 transition duration-500 cursor-pointer group ease">
                 <!-- Tab Title -->
-                    <div class="transition duration-500 ease group-hover:text-cyan-800"> Gian hae aap</div>
+                    <div class="transition duration-500 ease dark:group-hover:text-white group-hover:text-cyan-800"> Gian hae aap</div>
                     <!-- Arrow -->
-                    <div class="transition duration-500 ease group-focus:-rotate-180 group-hover:text-cyan-800">
+                    <div class="transition duration-500 ease group-focus:-rotate-180 dark:group-hover:text-white group-hover:text-cyan-800">
                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
                             <path fill="none" stroke="currentColor" stroke-width="3" d="M1 1l8 8 8-8"/>
                         </svg>
@@ -214,33 +221,10 @@
                     </p>
                 </div>
             </div>
-            <!-- Tab 4 -->
-            <div class="py-1 border-b outline-none group" tabindex="4">
-                <!-- Tab Flex Container -->
-                <div class="flex items-center justify-between py-3 text-gray-500 transition duration-500 cursor-pointer group ease">
-                <!-- Tab Title -->
-                    <div class="transition duration-500 ease group-hover:text-cyan-800"> How can I request a new browser?</div>
-                    <!-- Arrow -->
-                    <div class="transition duration-500 ease group-focus:-rotate-180 group-hover:text-cyan-800">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
-                            <path fill="none" stroke="currentColor" stroke-width="3" d="M1 1l8 8 8-8"/>
-                        </svg>
-                    </div>
-                </div>
-                <!-- Tab Inner Content -->
-                <div class="overflow-hidden transition duration-500 group-focus:max-h-screen max-h-0 ease">
-                    <p class="py-2 text-justify text-gray-400">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
-                        repellat amet doloribus consequuntur eos similique provident
-                        tempora voluptates iure quia fuga dicta voluptatibus culpa
-                        mollitia recusandae delectus id suscipit labore?
-                    </p>
-                </div>
-            </div>    
         </div> 
     </section>
 
-    <footer class="bg-slate-800 font-playfair">
+    <footer class= "dark:bg-slate-900 bg-slate-800 font-playfair">
         <div class="max-w-6xl mx-auto text-center px-10 py-10">
             <div class="flex flex-col items-center justify-between md:flex-row">
             <!-- Image -->
