--- a/Image Gallery.html
+++ b/Image Gallery.html
@@ -10,7 +10,7 @@
     <div class=" flex flex-col min-h-screen justify-center bg-[#0E1118]">
         <div class="flex justify-end flex-col items-center my-6 space-y-6 md:flex-row md:space-y-0 md:mb-2 md:my-16 md:mr-16">
             <div class="group mx-8  text-white text-2xl">
-                <a href="#">Home</a>
+                <a href="index.html">Portfolio</a>
                 <div class="mx-2 mt-2 duration-500 border-b-2 opacity-0 border-white group-hover:opacity-100"></div>
             </div>
             <div class="group mx-8   text-white text-2xl">
