--- a/Virtual Reality Page/index.html
+++ b/Virtual Reality Page/index.html
@@ -60,7 +60,7 @@
     </section>
     <!-- feature -->
     <section>
-        <div class="relative container flex  flex-col font-nunito max-w-6xl mx-auto my-32 
+        <div class="relative container flex  flex-col font-nunitoui  max-w-6xl mx-auto my-32 
         px-6 text-slate-600 md:flex-row md:px-0">
             <img src="./images/desktop/image-interactive.jpg" alt="">
             <div class="top-48 md:absolute bg-white pr-0 md:right-0
