--- a/Bookmark Page/index.html
+++ b/Bookmark Page/index.html
@@ -12,7 +12,7 @@
     <script src="js/script.js" defer></script>
 </head>
 <body class="overflow-x-hidden dark:bg-slate-800 dark:text-white ">
-    <nav class=" mx-auto p-6 shadow-md sticky px-20 dark:bg-slate-900 dark:text-white">
+    <nav class=" mx-auto p-6 shadow-md px-20 dark:bg-slate-900 dark:text-white">
         
         <div class="flex flex-col md:flex-row items-center justify-between space-y-10 md:space-y-0 md:space-x-20 my-6">
             <h1 class="uppercase font-bold font-playfair text-3xl">bookmark</h1>
